# boot-selector

./: .gitmodules  LICENSE  README.md
firmware/: CMakeLists.txt
firmware/src/: at42qt1070.c  at42qt1070.h  at42qt1070_regs.h  boot_switch.c  console.c  console.h  key.c  key.h  main.c  reboot.h  settings.c  settings.h  status.h  tud_dev_cb.c
firmware/src/bsp/: bsp.h  bsp_i2c.c  bsp_i2c.h  bsp_pindef.c  bsp_pindef.h
firmware/src/cap_sense/: at42qt1070.c  at42qt1070.h  cap_sense.c  cap_sense.h
firmware/src/keys/: key.c  key.h  key1.c  key1.h  key2.c  key2.h  keys.h
firmware/src/usb/: msc_disk.c
pcb/: .gitignore
pcb/boot_main/: app_flash.kicad_sch  boot_main.kicad_pcb  boot_main.kicad_prl  boot_main.kicad_pro  boot_main.kicad_sch  cap_sense.kicad_sch  led_ring_1.kicad_sch  led_ring_2.kicad_sch  led_ring_3.kicad_sch
pcb/boot_panel/: boot_panel.kicad_pcb  boot_panel.kicad_prl  boot_panel.kicad_pro  boot_panel.kicad_sch  cap_pads.kicad_sym
pcb/boot_panel/cap_pads.pretty/: square_20x20mm.kicad_mod
pcb/lib/: cap_pads.kicad_sym
pcb/lib/cap_pads.pretty/: square_20x20mm_guide.kicad_mod
src/: boot_switch.c  boot_switch.h  msc_disk.h  reboot.c
